--- a/templates/config-domain.cli.erb
+++ b/templates/config-domain.cli.erb
@@ -50,5 +50,35 @@ catch
 
 end-try
 
-/server-group=auth-server-group:write-attribute(name=profile, value=auth-server-standalone)                                                                    
+<%- if scope['keycloak::truststore'] -%>
+if (outcome != success) of /profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore:read-resource
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/:add
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/provider=file/:add(enabled=true)
+end-if
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/provider=file/:map-put(name=properties,key=file,value=<%= scope['keycloak::install_base'] %>/standalone/configuration/truststore.jks)
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/provider=file/:map-put(name=properties,key=password,value=<%= scope['keycloak::truststore_password'] %>)
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/provider=file/:map-put(name=properties,key=hostname-verification-policy,value=<%= scope['keycloak::truststore_hostname_verification_policy'] %>)
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore/provider=file/:map-put(name=properties,key=disabled,value=false)
+<%- else -%>
+if (outcome == success) of /profile=auth-server-standalone/subsystem=keycloak-server/spi=truststore:read-resource
+/subsystem=keycloak-server/subsystem=keycloak-server/spi=truststore/:remove
+end-if
+<%- end -%>
+
+/profile=auth-server-standalone/subsystem=keycloak-server/theme=defaults/:write-attribute(name=staticMaxAge, value=<%= scope['keycloak::theme_static_max_age'] %>)
+/profile=auth-server-standalone/subsystem=keycloak-server/theme=defaults/:write-attribute(name=cacheThemes, value=<%= scope['keycloak::theme_cache_themes'] %>)
+/profile=auth-server-standalone/subsystem=keycloak-server/theme=defaults/:write-attribute(name=cacheTemplates, value=<%= scope['keycloak::theme_cache_templates'] %>)
+/profile=auth-server-standalone/subsystem=deployment-scanner/scanner=default:write-attribute(name="auto-deploy-exploded",value=<%= scope['keycloak::auto_deploy_exploded'] %>)
+/profile=auth-server-standalone/subsystem=deployment-scanner/scanner=default:write-attribute(name="auto-deploy-zipped",value=<%= scope['keycloak::auto_deploy_zipped'] %>)
+
+try
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=userCache/provider=default/:add(enabled=<%= scope['keycloak::user_cache']%>)
+catch
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=userCache/provider=default/:remove
+/profile=auth-server-standalone/subsystem=keycloak-server/spi=userCache/provider=default/:add(enabled=<%= scope['keycloak::user_cache']%>)
+end-try
+
+
+/server-group=auth-server-group:write-attribute(name=profile, value=auth-server-standalone)
+
 stop-embedded-host-controller
