--- a/templates/config-domain.cli.erb
+++ b/templates/config-domain.cli.erb
@@ -94,6 +94,16 @@ catch
 end-try
 <%- end -%>
 
+<%- if scope['keycloak::syslog_audit_logging'] -%>
+if (result != true) of /host=master/core-service=management/access=audit/server-logger=audit-log:read-attribute(name=enabled)
+/host=master/core-service=management/access=audit/logger=audit-log:write-attribute(name=enabled,value=true)
+end-if
+batch
+/host=master/core-service=management/access=audit/syslog-handler=mysyslog:add(formatter=json-formatter)
+/host=master/core-service=management/access=audit/syslog-handler=mysyslog/protocol=udp:add(host=<%= scope['keycloak::syslog_server_address'] %>,port=<%= scope['keycloak::syslog_port'] %>)
+run-batch
+<%- end -%>
+
 /server-group=auth-server-group:write-attribute(name=profile, value=auth-server-standalone)
 
 stop-embedded-host-controller
