--- a/templates/config.cli.erb
+++ b/templates/config.cli.erb
@@ -109,4 +109,5 @@ batch
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog:add(formatter=json-formatter)
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog/protocol=udp:add(host=<%= scope['keycloak::syslog_server_address'] %>,port=<%= scope['keycloak::syslog_port'] %>)
 run-batch
+/host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog:add
 <%- end -%>
