--- a/templates/config.cli.erb
+++ b/templates/config.cli.erb
@@ -85,7 +85,7 @@ catch
 end-try
 <%- if scope['keycloak::syslog'] -%>
 if (outcome != success) of /subsystem=logging/syslog-handler=SYSLOG:read-resource
-/profile=auth-server-standalone/subsystem=logging/syslog-handler=SYSLOG::add
+/profile=auth-server-standalone/subsystem=logging/syslog-handler=SYSLOG/:add
 end-if
 /subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=app-name, value=<%= scope['keycloak::syslog_appname'] %>)
 /subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=facility, value=<%= scope['keycloak::syslog_facility'] %>)
