--- a/templates/config.cli.erb
+++ b/templates/config.cli.erb
@@ -87,7 +87,7 @@ end-try
 if (outcome != success) of /subsystem=logging/syslog-handler=SYSLOG:read-resource
 /profile=auth-server-standalone/subsystem=logging/syslog-handler=SYSLOG/:add
 end-if
-/subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=app-name, value=<%= scope['keycloak::syslog_appname'] %>)
+/subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=app-name, value=<%= scope['keycloak::syslog_app_name'] %>)
 /subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=facility, value=<%= scope['keycloak::syslog_facility'] %>)
 /subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=hostname, value=<%= scope['keycloak::syslog_hostname'] %>)
 /subsystem=logging/syslog-handler=SYSLOG/:write-attribute(name=level, value=<%= scope['keycloak::syslog_level'] %>)
