Add missing operation.
Signed-off-by: Kibahop <petri.lammi@puppeteers.net>

--- a/templates/config-domain.cli.erb
+++ b/templates/config-domain.cli.erb
@@ -102,7 +102,7 @@ batch
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog:add(formatter=json-formatter)
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog/protocol=udp:add(host=<%= scope['keycloak::syslog_server_address'] %>,port=<%= scope['keycloak::syslog_port'] %>)
 run-batch
-if (outcome != success) of /host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog
+if (outcome != success) of /host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog:read-resource
 /host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog/:add
 end-if
 <%- end -%>
