Add check for syslog handler.
Signed-off-by: Kibahop <petri.lammi@puppeteers.net>

--- a/templates/config-domain.cli.erb
+++ b/templates/config-domain.cli.erb
@@ -98,10 +98,12 @@ end-try
 if (result != true) of /host=master/core-service=management/access=audit/server-logger=audit-log:read-attribute(name=enabled)
 /host=master/core-service=management/access=audit/logger=audit-log:write-attribute(name=enabled,value=true)
 end-if
+if (outcome != success) of /host=master/core-service=management/access=audit/syslog-handler=mysyslog:read-resource
 batch
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog:add(formatter=json-formatter)
 /host=master/core-service=management/access=audit/syslog-handler=mysyslog/protocol=udp:add(host=<%= scope['keycloak::syslog_server_address'] %>,port=<%= scope['keycloak::syslog_port'] %>)
 run-batch
+end-if
 if (outcome != success) of /host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog:read-resource
 /host=master/core-service=management/access=audit/logger=audit-log/handler=mysyslog/:add
 end-if
